services/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: default
  labels:
    app: transmission
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: http
    - port: 51413
      targetPort: 51413
      protocol: TCP
      name: tcp5
    - port: 51413
      targetPort: 51413
      protocol: UDP
      name: udp5
  selector:
    app: transmission
